--- a/client/src/Components/User/UserHomePage.css
+++ b/client/src/Components/User/UserHomePage.css
@@ -49,3 +49,62 @@
     font-size: smaller;
     color: #ff9800;
 }
+/* 
+.change-room-bg{
+    background-color: #ff9800;
+    text-align: center;
+    border-radius: 10px 0px 0px 10px;
+    padding: 10%;
+}
+.change-room-height{
+    height: 50px;
+} */
+.change-room-number{
+    padding: 10px;
+    background-color: #ff9800;
+    text-align: center !important;
+    font-size: xx-large;
+    font-weight: bold;
+    border-radius: 8px 8px 0px 0px;
+}
+.card-width-change-room{
+    margin-right: 3%;
+    margin-bottom: -12px;
+    width: 44%;
+    text-align: center !important;
+}
+.scroll-change-room{
+    overflow-y: auto;
+}
+.scroll-change-room:hover{
+    cursor: pointer;
+}
+.fix-size-change-room-modal{
+    height: 400px;
+    
+}
+
+.resize-datetime-change-room{
+    font-size: smaller !important;
+}
+.mg-20{
+    margin-left: 10%;
+}
+.modal-center {
+    position: absolute;
+    float: left;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .btn-action-container-flex{
+    display: flex;
+  }
+.btn-edit-color{
+    color: orange;
+}
+.btn-delete-color{
+    color: red;
+}
+
+
