--- a/client/src/Components/Admin/AdminCustomStyle.css
+++ b/client/src/Components/Admin/AdminCustomStyle.css
@@ -61,3 +61,13 @@
     overflow-y: auto;
     max-height: 650px;
 }
+#container {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 10px;
+    width: 800px;
+    height: 800px;
+    background-color: #fff;
+  }
+  
