--- a/client/src/Components/Admin/AdminCustomStyle.css
+++ b/client/src/Components/Admin/AdminCustomStyle.css
@@ -70,4 +70,7 @@
     height: 800px;
     background-color: #fff;
   }
-  
+.select-changeroom-height{
+    max-height: 250px;
+    overflow-y: auto;
+}
